--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="corporate">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,7 +41,47 @@
 
 </head>
 <body class="font-lato">
+<header class="container mx-auto">
+    <!-- navbar -->
+    <div class="navbar bg-background rounded-full my-12 py-8 px-12">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-medium text-lg">
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+            </ul>
+          </div>
+          <div class="hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 font-medium text-lg text-white">
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="navbar-center">
+            <div class="flex justify-center items-center gap-3">
+                <img src="images/logo.png" alt="logo">
+                <h3 class="font-bold text-2xl md:text-4xl text-white">Fruit Burst</h3>
+            </div>
+        </div>
+        <div class="navbar-end">
+            <div class="form-control relative">
+                <input type="text" placeholder="Search here" class="input input-bordered w-36 md:w-auto rounded-full"/>
+                <i class="fa-solid fa-magnifying-glass absolute top-3 right-5 text-base text-[#121212]"></i>
+              </div>
+        </div>
+      </div>
 
+      <!-- carousel -->
+      
+</header>
     
 </body>
 </html>
