--- a/index.html
+++ b/index.html
@@ -80,8 +80,93 @@
       </div>
 
       <!-- carousel -->
-      
+      <div>
+        <div class="carousel w-full">
+            <!-- slide  -->
+            <div id="slide1" class="carousel-item relative w-full bg-[url('/images/banner1.png')] bg-no-repeat bg-cover rounded-xl">
+                <div class="hero-overlay bg-opacity-60 rounded-xl">
+                    <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
+                        <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class="text-white text-lg font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-background border-0 text-white font-extrabold text-lg">Shop Now</button>
+                    </div>
+                </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slide  -->
+            <div id="slide2" class="carousel-item relative w-full bg-[url('/images/banner2.png')] bg-no-repeat bg-cover rounded-xl">
+                <div class="hero-overlay bg-opacity-60 rounded-xl">
+                    <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
+                        <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class="text-white text-lg font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-background border-0 text-white font-extrabold text-lg">Shop Now</button>
+                    </div>
+                </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- slide  -->
+            <div id="slide3" class="carousel-item relative w-full bg-[url('/images/banner3.png')] bg-no-repeat bg-cover rounded-xl">
+                <div class="hero-overlay bg-opacity-60 rounded-xl">
+                    <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
+                        <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class="text-white text-lg font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-background border-0 text-white font-extrabold text-lg">Shop Now</button>
+                    </div>
+                </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slide -->
+            <div id="slide4" class="carousel-item relative w-full bg-[url('/images/banner4.png')] bg-no-repeat bg-cover rounded-xl">
+                <div class="hero-overlay bg-opacity-60 rounded-xl">
+                    <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
+                        <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
+                        <p class="text-white text-lg font-medium">We supply highly quality organic products</p>
+                        <button class="btn bg-background border-0 text-white font-extrabold text-lg">Shop Now</button>
+                    </div>
+                </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="hidden md:flex justify-around items-center w-4/5 mx-auto bg-white py-10 drop-shadow-xl rounded-xl relative -top-28 ">
+            <div class="text-center ">
+                <img src="images/fruit1.png" alt="fruit">
+                <h5 class="text-lg font-bold">Grapes</h5>
+            </div>
+            <div class="text-center">
+                <img src="images/fruit2.png" alt="fruit">
+                <h5 class="text-lg font-bold">Orange</h5>
+            </div>
+            <div class="text-center">
+                <img src="images/fruit3.png" alt="fruit">
+                <h5 class="text-lg font-bold">Mango</h5>
+            </div>
+            <div class="text-center">
+                <img src="images/fruit4.png" alt="fruit">
+                <h5 class="text-lg font-bold">Strawberry</h5>
+            </div>
+            <div class="text-center">
+                <img src="images/fruit5.png" alt="fruit">
+                <h5 class="text-lg font-bold">Pomegranate</h5>
+            </div>
+          </div>
+      </div>
 </header>
+<main class="container mx-auto">
+
+</main>
     
 </body>
 </html>
