--- a/index.html
+++ b/index.html
@@ -166,6 +166,49 @@
 </header>
 <main class="container mx-auto">
 
+    <!-- deal area  -->
+    <section class="my-24">
+        <div class="flex flex-col md:flex-row justify-between items-center gap-10">
+            <div class="w-5/6 mx-auto lg:w-2/5">
+                <h2 class="text-5xl text-title font-extrabold">Deal of the day</h2>
+                <p class="text-base font-medium mt-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="w-5/6 mx-auto lg:w-2/5">
+                <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:15;"></span> :
+                      </span>
+                      days
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:10;"></span> :
+                      </span>
+                      hours
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:24;"></span> :
+                      </span>
+                      min
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:44;"></span>
+                      </span>
+                      sec
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                
+            </div>
+        </div>
+    </section>
 </main>
     
 </body>
