--- a/index.html
+++ b/index.html
@@ -204,8 +204,207 @@
         </div>
 
         <div>
-            <div>
-                
+            <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-24">
+                <!-- card  -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit6.png" alt="fruit" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">12.90$ - 18.85$</h2>
+                      <p>Apples</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" checked />
+                        <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+                      </div>
+                      <div class="card-actions">
+                        <!-- Open the modal using ID.showModal() method -->
+                        <a class="text-[#F85559]" onclick="my_modal_1.showModal()">Details</a>
+                        <dialog id="my_modal_1" class="modal modal-bottom sm:modal-middle">
+                            <div class="modal-box text-center items-center">
+                                <div class="card">
+                                    <figure class="px-10 pt-10">
+                                      <img src="images/fruit6.png" alt="fruit" class="rounded-xl" />
+                                    </figure>
+                                    <div class="card-body items-center text-center">
+                                      <h2 class="card-title">Apples</h2>
+                                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                      <div class="rating">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]"  />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                      </div>
+                                      <div class="card-actions">
+                                        <div class="modal-action">
+                                            <form method="dialog">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                                <button class="btn">Close</button>
+                                                <button class="btn">Buy Now</button>
+                                            </form>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
+                        </dialog>
+                      </div>
+                    </div>
+                </div>
+                <!-- card  -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit7.png" alt="fruit" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">12.90$ - 18.85$</h2>
+                      <p>Orange</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" checked />
+                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                      </div>
+                      <div class="card-actions">
+                        <!-- Open the modal using ID.showModal() method -->
+                        <a class="text-[#F85559]" onclick="my_modal_2.showModal()">Details</a>
+                        <dialog id="my_modal_2" class="modal modal-bottom sm:modal-middle">
+                            <div class="modal-box text-center items-center">
+                                <div class="card">
+                                    <figure class="px-10 pt-10">
+                                      <img src="images/fruit7.png" alt="fruit" class="rounded-xl" />
+                                    </figure>
+                                    <div class="card-body items-center text-center">
+                                      <h2 class="card-title">Orange</h2>
+                                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                      <div class="rating">
+                                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                                      </div>
+                                      <div class="card-actions">
+                                        <div class="modal-action">
+                                            <form method="dialog">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                                <button class="btn">Close</button>
+                                                <button class="btn">Buy Now</button>
+                                            </form>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
+                        </dialog>
+                      </div>
+                    </div>
+                </div>
+                <!-- card  -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit8.png" alt="fruit" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">12.90$ - 18.85$</h2>
+                      <p>Red Dragon</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" checked />
+                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                      </div>
+                      <div class="card-actions">
+                        <!-- Open the modal using ID.showModal() method -->
+                        <a class="text-[#F85559]" onclick="my_modal_3.showModal()">Details</a>
+                        <dialog id="my_modal_3" class="modal modal-bottom sm:modal-middle">
+                            <div class="modal-box text-center items-center">
+                                <div class="card">
+                                    <figure class="px-10 pt-10">
+                                      <img src="images/fruit8.png" alt="fruit" class="rounded-xl" />
+                                    </figure>
+                                    <div class="card-body items-center text-center">
+                                      <h2 class="card-title">Red Dragon</h2>
+                                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                      <div class="rating">
+                                        <input type="radio" name="rating-6" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-6" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-6" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-6" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-6" class="mask mask-star-2 bg-[#F85559]" />
+                                      </div>
+                                      <div class="card-actions">
+                                        <div class="modal-action">
+                                            <form method="dialog">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                                <button class="btn">Close</button>
+                                                <button class="btn">Buy Now</button>
+                                            </form>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
+                        </dialog>
+                      </div>
+                    </div>
+                </div>
+                <!-- card  -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit9.png" alt="fruit" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">12.90$ - 18.85$</h2>
+                      <p>Banana</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-7" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-7" class="mask mask-star-2 bg-[#F85559]" checked />
+                        <input type="radio" name="rating-7" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-7" class="mask mask-star-2 bg-[#F85559]" />
+                        <input type="radio" name="rating-7" class="mask mask-star-2 bg-[#F85559]" />
+                      </div>
+                      <div class="card-actions">
+                        <!-- Open the modal using ID.showModal() method -->
+                        <a class="text-[#F85559]" onclick="my_modal_4.showModal()">Details</a>
+                        <dialog id="my_modal_4" class="modal modal-bottom sm:modal-middle">
+                            <div class="modal-box text-center items-center">
+                                <div class="card">
+                                    <figure class="px-10 pt-10">
+                                      <img src="images/fruit6.png" alt="fruit" class="rounded-xl" />
+                                    </figure>
+                                    <div class="card-body items-center text-center">
+                                      <h2 class="card-title">Banana</h2>
+                                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                      <div class="rating">
+                                        <input type="radio" name="rating-8" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-8" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-8" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-8" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-8" class="mask mask-star-2 bg-[#F85559]" />
+                                      </div>
+                                      <div class="card-actions">
+                                        <div class="modal-action">
+                                            <form method="dialog">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                                <button class="btn">Close</button>
+                                                <button class="btn">Buy Now</button>
+                                            </form>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
+                        </dialog>
+                      </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
