--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
             </div>
         </div>
 
-        <div>
-            <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-24">
+        <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-24">
                 <!-- card  -->
                 <div class="card bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
@@ -405,8 +404,94 @@
                       </div>
                     </div>
                 </div>
-            </div>
         </div>
+    </section>
+
+    <!-- team area -->
+    <section class="my-24 bg-[url('/images/banner1.png')] bg-no-repeat bg-cover rounded-xl">
+      <div class="hero-overlay bg-opacity-60 py-32 rounded-xl">
+        <div class="text-center text-white w-2/4 mx-auto">
+          <h2 class="text-5xl font-extrabold">Meet the team section</h2>
+          <p class="text-base font-medium mt-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+
+        <!-- team members -->
+        <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 w-5/6 mx-auto mt-10">
+          <!-- member -->
+          <div class="card hover:border-2">
+            <figure class="px-10 pt-10">
+              <img src="images/member1.png" alt="member" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center text-white">
+              <h2 class="card-title">Awlad Hossain</h2>
+              <p>Fruits Expert</p>
+              <div class="card-actions">
+                <nav>
+                  <div class="grid grid-flow-col gap-4">
+                    <a><i class="fa-brands fa-facebook text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-twitter text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-linkedin text-[#F85559]"></i></a>
+                  </div>
+                </nav>
+              </div>
+            </div>
+          </div>
+          <div class="card hover:border-2">
+            <figure class="px-10 pt-10">
+              <img src="images/member2.png" alt="member" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center text-white">
+              <h2 class="card-title">Safia Chowdhury</h2>
+              <p>Fruits Expert</p>
+              <div class="card-actions">
+                <nav>
+                  <div class="grid grid-flow-col gap-4">
+                    <a><i class="fa-brands fa-facebook text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-twitter text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-linkedin text-[#F85559]"></i></a>
+                  </div>
+                </nav>
+              </div>
+            </div>
+          </div>
+          <div class="card hover:border-2">
+            <figure class="px-10 pt-10">
+              <img src="images/member3.png" alt="member" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center text-white">
+              <h2 class="card-title">Rokib Hossain</h2>
+              <p>Fruits Expert</p>
+              <div class="card-actions">
+                <nav>
+                  <div class="grid grid-flow-col gap-4">
+                    <a><i class="fa-brands fa-facebook text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-twitter text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-linkedin text-[#F85559]"></i></a>
+                  </div>
+                </nav>
+              </div>
+            </div>
+          </div>
+          <div class="card hover:border-2">
+            <figure class="px-10 pt-10">
+              <img src="images/member4.png" alt="member" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center text-white">
+              <h2 class="card-title">Chaity</h2>
+              <p>Fruits Expert</p>
+              <div class="card-actions">
+                <nav>
+                  <div class="grid grid-flow-col gap-4">
+                    <a><i class="fa-brands fa-facebook text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-twitter text-[#F85559]"></i></a>
+                    <a><i class="fa-brands fa-linkedin text-[#F85559]"></i></a>
+                  </div>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 </main>
     
