--- a/index.html
+++ b/index.html
@@ -493,6 +493,66 @@
         </div>
       </div>
     </section>
+
+    <!-- choose area -->
+    <section class="my-24">
+      <div class="text-center w-2/4 mx-auto">
+        <h2 class="text-5xl font-extrabold">Meet the team section</h2>
+        <p class="text-base font-medium mt-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+      </div>
+
+      <div class="flex gap-10 flex-col justify-between items-center lg:flex-row mt-14">
+        <div class="space-y-5">
+          <div class="flex flex-col lg:flex-row items-center gap-5">
+            <i class="fa-solid fa-people-group"></i>
+            <div class="text-center lg:text-start">
+              <h4 class="font-extrabold text-title text-2xl">Dedicated Team</h4>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex flex-col lg:flex-row items-center gap-5">
+            <i class="fa-solid fa-heart-pulse"></i>
+            <div class="text-center lg:text-start">
+              <h4 class="font-extrabold text-title text-2xl">Fresh is Best</h4>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex flex-col lg:flex-row items-center gap-5">
+            <i class="fa-solid fa-gifts"></i>
+            <div class="text-center lg:text-start">
+              <h4 class="font-extrabold text-title text-2xl">Gift Certificates</h4>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <img src="images/whychoose1.png" alt="choose">
+        </div>
+        <div class="space-y-5">
+          <div class="flex flex-col lg:flex-row-reverse items-center gap-5 text-center md:text-end">
+            <i class="fa-solid fa-people-group"></i>
+            <div class="text-center lg:text-end">
+              <h4 class="font-extrabold text-title text-2xl">Dedicated Team</h4>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex flex-col lg:flex-row-reverse items-center gap-5 text-center md:text-end">
+            <i class="fa-solid fa-heart-pulse"></i>
+            <div class="text-center lg:text-end">
+              <h4 class="font-extrabold text-title text-2xl">Fresh is Best</h4>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex flex-col lg:flex-row-reverse items-center gap-5 text-center md:text-end">
+            <i class="fa-solid fa-gifts"></i>
+            <div class="text-center lg:text-end">
+              <h4 class="font-extrabold text-title text-2xl">Gift Certificates</h4>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 </main>
     
 </body>
