--- a/index.html
+++ b/index.html
@@ -554,6 +554,33 @@
       </div>
     </section>
 </main>
+
+<footer class="footer footer-center p-20 bg-title text-white">
+  <aside>
+    <div class="flex justify-center items-center gap-3">
+      <img src="images/logo.png" alt="logo">
+      <h3 class="font-bold text-2xl md:text-4xl text-white">Fruit Burst</h3>
+  </div>
+  <nav class="grid grid-flow-col gap-5 mt-5 text-lg font-semibold">
+    <a class="link link-hover">Home</a>
+    <a class="link link-hover">About us</a>
+    <a class="link link-hover">Shop</a>
+    <a class="link link-hover">All Fruits</a>
+    <a class="link link-hover">Support</a>
+    <a class="link link-hover">My Account</a>
+  </nav>
+  </aside> 
+  <nav>
+    <div class="grid grid-flow-col gap-5 text-3xl">
+      <a><i class="fa-brands fa-twitter hover:text-[#F85559] hover:cursor-pointer"></i></a>
+      <a><i class="fa-brands fa-facebook hover:text-[#F85559] hover:cursor-pointer"></i></a>
+      <a><i class="fa-brands fa-youtube hover:text-[#F85559] hover:cursor-pointer"></i></a>
+      <a><i class="fa-brands fa-linkedin hover:text-[#F85559] hover:cursor-pointer"></i></a>
+      <a><i class="fa-brands fa-instagram hover:text-[#F85559] hover:cursor-pointer"></i></a>
+      <a><i class="fa-brands fa-apple hover:text-[#F85559] hover:cursor-pointer"></i></a>
+    </div>
+  </nav>
+</footer>
     
 </body>
 </html>
