--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div>
         <div class="carousel w-full">
             <!-- slide  -->
-            <div id="slide1" class="carousel-item relative w-full bg-[url('/images/banner1.png')] bg-no-repeat bg-cover rounded-xl">
+            <div id="slide1" class="carousel-item relative w-full bg-no-repeat bg-cover rounded-xl" style="background-image: url(images/banner1.png);">
                 <div class="hero-overlay bg-opacity-60 rounded-xl">
                     <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
                         <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
@@ -97,7 +97,7 @@
               </div>
             </div> 
             <!-- slide  -->
-            <div id="slide2" class="carousel-item relative w-full bg-[url('/images/banner2.png')] bg-no-repeat bg-cover rounded-xl">
+            <div id="slide2" class="carousel-item relative w-full bg-no-repeat bg-cover rounded-xl" style="background-image: url(images/banner1.png);">
                 <div class="hero-overlay bg-opacity-60 rounded-xl">
                     <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
                         <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
@@ -111,7 +111,7 @@
               </div>
             </div>
             <!-- slide  -->
-            <div id="slide3" class="carousel-item relative w-full bg-[url('/images/banner3.png')] bg-no-repeat bg-cover rounded-xl">
+            <div id="slide3" class="carousel-item relative w-full bg-no-repeat bg-cover rounded-xl" style="background-image: url(images/banner1.png);">
                 <div class="hero-overlay bg-opacity-60 rounded-xl">
                     <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
                         <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
@@ -125,7 +125,7 @@
               </div>
             </div> 
             <!-- slide -->
-            <div id="slide4" class="carousel-item relative w-full bg-[url('/images/banner4.png')] bg-no-repeat bg-cover rounded-xl">
+            <div id="slide4" class="carousel-item relative w-full bg-no-repeat bg-cover rounded-xl" style="background-image: url(images/banner1.png);">
                 <div class="hero-overlay bg-opacity-60 rounded-xl">
                     <div class="space-y-3 text-center w-3/5 mx-auto py-40 ">
                         <h1 class="text-7xl text-white font-extrabold">Exotic tastes at your doorstep</h1>
@@ -408,7 +408,7 @@
     </section>
 
     <!-- team area -->
-    <section class="my-24 bg-[url('/images/banner1.png')] bg-no-repeat bg-cover rounded-xl">
+    <section class="my-24 bg-no-repeat bg-cover rounded-xl" style="background-image: url(images/banner1.png);">
       <div class="hero-overlay bg-opacity-60 py-32 rounded-xl">
         <div class="text-center text-white w-2/4 mx-auto">
           <h2 class="text-5xl font-extrabold">Meet the team section</h2>
